Finished fixing the greetings and email button.

--- a/hobby/templates/hobby/home.html
+++ b/hobby/templates/hobby/home.html
@@ -64,11 +64,10 @@
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1>Album example</h1>
-      <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+      <h1>Hi! I'm Zedd!</h1>
+      <p class="lead text-muted">How are you? My full name's Zeddrix Fabian. I am currently learning Django as I make this tutorial--that's the truth. Here are my hobbies and my projects.</p>
       <p>
-        <a href="#" class="btn btn-primary my-2">Main call to action</a>
-        <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+        <a href="mailto:zeddrix.fabian@gmail.com" class="btn btn-primary my-2">Email me</a>
       </p>
     </div>
   </section>
