--- a/hobby/templates/hobby/home.html
+++ b/hobby/templates/hobby/home.html
@@ -54,6 +54,7 @@
           <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" href="#">About</a>
             <a class="nav-item nav-link" href="#">Facebook</a>
+            <a class="nav-item nav-link" href="#">Projects</a>
             <a class="nav-item nav-link" href="#">Blog</a>
           </div>
         </div>
