Showed all blog posts.

--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -46,8 +46,7 @@
     <link href="blog.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
-    
+
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Zedd Fabian</a>
@@ -72,22 +71,22 @@
   </div>
 
   <div class="row mb-2">
+    {% for blog in blogs.all %}
     <div class="col-md-6">
       <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
-          <strong class="d-inline-block mb-2 text-success">Design</strong>
-          <h3 class="mb-0">Post title</h3>
-          <div class="mb-1 text-muted">Nov 11</div>
-          <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <h3 class="mb-0">{{ blog.title }}</h3>
+          <p class="text-info">{{ blog.pub_date }}</p>
+          <p class="mb-auto">{{ blog.summary }}</p>
           <a href="#" class="stretched-link">Continue reading</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          <img class="img-fluid" src="{{ blog.image.url }}" height="400" width="400" />
         </div>
       </div>
     </div>
+    {% endfor %}
   </div>
-</div>
 
 <footer class="blog-footer">
     <div class="container">
