--- a/hobby/templates/hobby/home.html
+++ b/hobby/templates/hobby/home.html
@@ -47,16 +47,16 @@
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Zedd Fabian</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Zedd Fabian</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" href="#">About</a>
-            <a class="nav-item nav-link" href="#">Facebook</a>
-            <a class="nav-item nav-link" href="#">Projects</a>
-            <a class="nav-item nav-link" href="#">Blog</a>
+            <a class="nav-item nav-link" href="{% static 'About.pdf' %}">About</a>
+            <a class="nav-item nav-link" href="https://www.facebook.com/zeddrix">Facebook</a>
+            <a class="nav-item nav-link" href="{% url 'projects' %}">Projects</a>
+            <a class="nav-item nav-link" href="{% url 'blogs' %}">Blog</a>
           </div>
         </div>
       </nav>
