--- a/blog/templates/blog/content.html
+++ b/blog/templates/blog/content.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.6">
-    <title>Blog</title>
+    <title>{{ blog.title }}</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/blog/">
 
@@ -68,14 +68,19 @@
   <div class="jumbotron p-4 p-md-5 text-black rounded bg-light">
     <div class="text-center">
       <h1 class="display-3">{{ blog.title }}</h1>
+      <p class="text-center text-secondary">{{ blog.pub_date }}</p>
     </div>
   </div>
   <div class="text-center">
      <img class="img-fluid" src="{{ blog.image.url }}"/>
   </div>
+  <br>
+    <div class="container">
+     <p>{{ blog.body }}</p>
+    </div> 
 
 <footer class="blog-footer">
-    <div class="container">
+    <div class="container text-center">
         <p>Copyright © {% now "Y" %} Zedd Fabian</p>
     </div>
 </footer>
