--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -90,9 +90,9 @@
   </div>
 
 <footer class="blog-footer">
-    <div class="container">
-        <p>Copyright © {% now "Y" %} Zedd Fabian</p>
-    </div>
+  <div class="container text-center">
+    <p>Copyright © {% now "Y" %} Zedd Fabian</p>
+  </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
