--- a/hobby/templates/hobby/home.html
+++ b/hobby/templates/hobby/home.html
@@ -103,8 +103,8 @@
 </main>
 
 <footer class="text-muted">
-  <div class="container">
-  <p>Copyright © {% now "Y" %} Zedd Fabian</p>
+  <div class="container text-center">
+    <p>Copyright © {% now "Y" %} Zedd Fabian</p>
   </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
